# football-injury-ai

./: .gitignore  AGENTS.md  README.md  conftest.py  pyproject.toml  requirements.txt  session-ses_32c3.md  session-ses_33bc.md  skills-lock.json
configs/: module1.yaml  pretrain.yaml  pretrain_final.yaml  pretrain_perceiver_rope.yaml
configs/experiments/module1/: baseline_transformer.yaml  tcn_ablation.yaml
docs/: COMMANDS.md  LABELING_GUIDE.md  anubis_eda_plan.md  module1_research_notes.md  module1_restart_plan.md
module1/: README.md  __init__.py  pipeline.py
module1/data/: anubis_class_names.yaml  anubis_loader.py  joint_config.py  preprocess.py
module1/gnn/: graph.py  model.py  train.py
module1/pose/: extractor.py  tracker.py
module1/pretrain/: evaluate.py  experiments.py  live_inference.py  live_utils.py  model.py  train.py  tune_optuna.py
module1/transformer/: model.py  train.py
notebooks/: 01_pose_exploration.ipynb  02_graph_exploration.ipynb  03_model_experiments.ipynb  anubis_data.ipynb
scripts/: anubis_feature_stats.py  anubis_label_stats.py
tests/: test_anubis_loader.py  test_experiments.py  test_graph.py  test_joint_config.py  test_live_label_map.py  test_live_pipeline.py  test_model.py  test_pipeline.py  test_pose.py
utils/: config.py  logger.py
