[project]
name = "football-injury-ai"
version = "0.1.0"
description = "Real-time football player injury risk prediction using pose estimation and deep learning"
requires-python = ">=3.12"
dependencies = [
    # Core
    "numpy>=1.24",
    "pandas>=2.0",
    "pyyaml>=6.0",
    # Computer Vision & Pose Estimation
    "opencv-python>=4.8",
    "mediapipe>=0.10",
    # Deep Learning
    "torch>=2.1",
    "torchvision>=0.16",
    # Graph Neural Networks
    "torch-geometric>=2.4",
    # torch-scatter and torch-sparse installed separately:
    # pip install torch-scatter torch-sparse -f https://data.pyg.org/whl/torch-2.1.0+cpu.html
    # Visualisation
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "networkx>=3.2",
    # Evaluation & Utilities
    "scikit-learn>=1.3",
    "tqdm>=4.65",
    "optuna>=3.6",
    # Notebooks
    "jupyter>=1.0",
    "ipykernel>=6.0",
    # Testing
    "pytest>=7.4",
    "huggingface-hub>=1.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "black>=23.0",
    "ruff>=0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["module1", "module2", "module3", "fusion", "utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.black]
line-length = 88
target-version = ["py312"]
